# podcast-content

./: README.md  pyproject.toml
data/: sitios.json  theme_register.json  theme_text_extractor.json
documenhts/: Sin título.numbers
notebooks/: base_extract_text_web.ipynb  proof_zephyr7b.ipynb  textExtractorManager.py  text_preprocessing.py  theme_manager.ipynb
